# hdmi-switch

./: README.md
firmware/: Makefile  cross-arm.txt  cross-samd21.txt  main.c  meson.build  usb_descriptors.c
firmware/linker-script-as-property/: meson.build
firmware/subprojects/: libsam  libsam.wrap
hardware/: hdmi-switch.kicad_pcb  hdmi-switch.kicad_pro  hdmi-switch.kicad_sch
hardware/v0.1/: hdmi-switch.kicad_pcb  hdmi-switch.kicad_pro  hdmi-switch.kicad_sch
